; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/fb/extr_nvc0.c_nvc0_fb_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/fb/extr_nvc0.c_nvc0_fb_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_object = type { i32 }
%struct.nvc0_fb_priv = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nouveau_object*)* @nvc0_fb_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nvc0_fb_init(%struct.nouveau_object* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.nouveau_object*, align 8
  %4 = alloca %struct.nvc0_fb_priv*, align 8
  %5 = alloca i32, align 4
  store %struct.nouveau_object* %0, %struct.nouveau_object** %3, align 8
  %6 = load %struct.nouveau_object*, %struct.nouveau_object** %3, align 8
  %7 = bitcast %struct.nouveau_object* %6 to i8*
  %8 = bitcast i8* %7 to %struct.nvc0_fb_priv*
  store %struct.nvc0_fb_priv* %8, %struct.nvc0_fb_priv** %4, align 8
  %9 = load %struct.nvc0_fb_priv*, %struct.nvc0_fb_priv** %4, align 8
  %10 = getelementptr inbounds %struct.nvc0_fb_priv, %struct.nvc0_fb_priv* %9, i32 0, i32 1
  %11 = call i32 @nouveau_fb_init(i32* %10)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %1
  %15 = load i32, i32* %5, align 4
  store i32 %15, i32* %2, align 4
  br label %23

16:                                               ; preds = %1
  %17 = load %struct.nvc0_fb_priv*, %struct.nvc0_fb_priv** %4, align 8
  %18 = load %struct.nvc0_fb_priv*, %struct.nvc0_fb_priv** %4, align 8
  %19 = getelementptr inbounds %struct.nvc0_fb_priv, %struct.nvc0_fb_priv* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = ashr i32 %20, 8
  %22 = call i32 @nv_wr32(%struct.nvc0_fb_priv* %17, i32 1051664, i32 %21)
  store i32 0, i32* %2, align 4
  br label %23

23:                                               ; preds = %16, %14
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @nouveau_fb_init(i32*) #1

declare dso_local i32 @nv_wr32(%struct.nvc0_fb_priv*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
